demarca-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demarca-celery
  labels:
    app: demarca-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demarca-celery
  template:
    metadata:
      labels:
        app: demarca-celery
    spec:
      containers:
      - name: celery
        image: isaacas/demarca:latest
        command: ["celery", "-A", "config", "worker", "-l", "INFO"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: demarca-data
          mountPath: /app/media
      volumes:
      - name: demarca-data
        persistentVolumeClaim:
          claimName: demarca-data-pvc
