demarca-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demarca-service
spec:
  selector:
    app: demarca-web
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
