demarca-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demarca-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - demarca.212.85.21.107.nip.io
    secretName: demarca-tls
  rules:
  - host: demarca.212.85.21.107.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demarca-service
            port:
              number: 80
